--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="form-group">
-              <input class="form-control js-contact-form__phone-input" type="tel" name="phone" aria-label="Phone" placeholder="Phone" autocomplete="off" required>
+              <input class="form-control js-contact-form__phone-input" type="tel" name="phone" aria-label="Phone" placeholder="+998-**-***-**-**" autocomplete="off" pattern='[\+]\d{3}\d{2}\d{3}\d{2}\d{2}' required>
             </div>
 
             <button class="btn btn-primary btn-block">Add contact</button>
